fix right part overFlow

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -310,11 +310,12 @@ header {
   background: var(--bg-primary);
   margin-right: 1rem;
   border-radius: 10px;
-  height: 550px;
+  height: 512px;
   width: 170px;
   position: fixed;
   right: 2rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
 }
 .all_right_header {
   font-size: 20px;
