--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -110,7 +110,7 @@
   .stories .white_circle{
    right: 5px;
   }
-  .stories_profile_pic{
+  .story_profile_pic{
     width: 7vw;
     height: 7vw;
   }
